welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: not found: value vuBiscuit
			vuBiscuit == true
                        ^