welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Boolean = false
	if (vuBiscuit == true) {
		return true;
	} else {
		return false;
	}
}

while (!haveBaggle()) {
for (i1 <- 1 to 6) {
		avance()
		if (estSurBiscuit) {
			vuBiscuit == true
		}
	}
	for (i2 <- 1 to 6) {
		recule()
	}
	droite()
	avance()
}